Covid Challenge/Round-3/judge/submissions/96105948/result.txt
------------- user information -------------
identity: 96105948
username: sor100100
full name: سروش فرقدانی
email address: sor100100@yahoo.com
------------- result -------------
problem name: راند سوم (عملیات‌های محدود)
state: داوری شد
short judge result: خطای کامپایل
penalty: 100%
judge score: 0
judge score with delay: 0
instructor score: not set yet.
------------- judge log -------------

Starting tester...
type = judge
Sat May 16 01:11:48 +0430 2020
Language: cpp
Time Limit: 10.0 s
Memory Limit: 262144 kB
Output size limit: 20971520 bytes
Compiling as cpp
Enabling Shield For C/C++
Compiled. Exit Code=1  Execution Time: 2091 ms
Compile Error
In file included from shield.cpp:22:0:
code.c: In member function ‘Graph Graph::find_mst()’:
code.c:229:18: error: ‘INT_MAX’ was not declared in this scope
         key[i] = INT_MAX, mstSet[i] = false;
                  ^~~~~~~
code.c:229:18: note: suggested alternative: ‘INT8_MAX’
         key[i] = INT_MAX, mstSet[i] = false;
                  ^~~~~~~
                  INT8_MAX
code.c:237:29: error: ‘INT_MAX’ was not declared in this scope

Total Execution Time: 2886 ms

